wdh. und responsiv

--- a/2.Woche/Assets/5.-Tag/2-responsive_projekt/index.html
+++ b/2.Woche/Assets/5.-Tag/2-responsive_projekt/index.html
@@ -49,7 +49,7 @@
         </p>
         </section>
 
-        <section class="column">
+        <section class="column middle">
         <h2 class="subtitle">Blends</h2>
         <p>Our tasters have put together a selection of
             carefully balanced blends. Our famous
@@ -58,7 +58,7 @@
         </p>
         </section>
 
-        <section class="column">
+        <section class="column last">
         <h2 class="subtitle">Brewing Equipment</h2>
         <p>We offer our favorite kettles, French
             presses, and pour-over cones. Come to one of
