--- a/3.Woche/Assets/3.-Tag/3-emmet.html
+++ b/3.Woche/Assets/3.-Tag/3-emmet.html
@@ -75,6 +75,15 @@
     </form>
     <!-- form>label+input:text+button{Senden} -->
     <form action=""><label for=""></label><input type="text" name="" id=""><button>Senden</button></form>
+
+    <!-- section.class1#id1>ul>li[data-label=val$].item${item}*3 -->
+    <section class="class1" id="id1">
+        <ul>
+            <li data-label="val1" class="item1">item</li>
+            <li data-label="val2" class="item2">item</li>
+            <li data-label="val3" class="item3">item</li>
+        </ul>
+    </section>
 </body>
 
 </html>
