jquery und übungen

--- a/3.Woche/Assets/4.-Tag/4-jquery/4-jquery_gallery.html
+++ b/3.Woche/Assets/4.-Tag/4-jquery/4-jquery_gallery.html
@@ -10,6 +10,12 @@
 <body>
     <div class="gallery">
         <h1>Jquery Gallery</h1>
+        <div id="progress-bar">
+            <div class="bar-item"></div>
+            <div class="bar-item"></div>
+            <div class="bar-item"></div>
+            <div class="bar-item"></div>
+        </div>
         <div class="main">
             <!-- Hauptbild -->
             <img id="main-img" src="https://picsum.photos/id/237/600/400" alt="">
